custom multiplication addition

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -201,6 +201,13 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h2>
+				<p>02.11.2024</p>
+				- Lenge siden forrige offentlige oppdatering - Men det har skjedd en del ting bak sløret. <br>
+				- La til Faktor B i Egendefinert Modus for multiplikasjon. Nå kan du øve på den gangen du trenger å øve på! <br>
+				- Fikset en feil hvor Roaring Moon, Iron Valiant, Walking Wake og Iron Leaves var klassifisert som Legendariske... Det er de ikke, selv om de er Paradox Pokemon. (Takk, Halvor, for at du følger med!) <br>
+				- Fikset småfeil.<br>
+				- Til lærere: Test ut https://pokemath.online/bingo.html -> Den kan være motiverende å ha på tavlen, og la elevene klikke ut om de får en som er på bingokortet. Eller så kan de ha hvert sitt bingo-kort i en egen fane. Bruk den som dere vil, det var bare et morsomt sideprosjekt jeg hadde for en stund siden.<br>
+				- Også til lærere: Det finnes en del hemmelige koder som kan gis som ekstra belønninger til elever. Send oss en velformulert e-post fra en jobb-konto (for å filtrere ut små luringer), så kan dere få noen av de. Inkluder gjerne hvilken skole og hvilk(e) trinn dere jobber med, men dette er ikke et krav. Jeg er bare nyskjerrig!<br>
 				<p>30.09.2023</p>
 				- La til "Badges", eller "Merker" som de heter på norsk. <br>
 				- La til flere høst/halloween pokemon.<br>
