--- a/MathGame/customizer.html
+++ b/MathGame/customizer.html
@@ -190,11 +190,17 @@
 			<label for="multiplicationcheck">  </label>
 		</div>
 		<div class="form-group col-md-6" id="mulSection" style="display: none;">
-			<label for="first">Laveste faktor:</label>
-			<input type="number" id="mulMinSel" value="0" class="form-control" required autocomplete="off">
+			<label for="first">Faktor A laveste verdi:</label>
+			<input type="number" id="mulMinSelA" value="0" class="form-control" required autocomplete="off">
 			
-			<label for="first">Høyeste faktor:</label>
-			<input type="number" id="mulMaxSel" value="10" class="form-control" required autocomplete="off">
+			<label for="first">Faktor A høyeste verdi:</label>
+			<input type="number" id="mulMaxSelA" value="10" class="form-control" required autocomplete="off">
+
+			<label for="first">Faktor B laveste verdi:</label>
+			<input type="number" id="mulMinSelB" value="0" class="form-control" required autocomplete="off">
+			
+			<label for="first">Faktor B høyeste verdi:</label>
+			<input type="number" id="mulMaxSelB" value="10" class="form-control" required autocomplete="off">
 
 			<label for="quantity"> Desimaler (0-5): </label>
 			<input type="number" value="0" id="mulDecSel" min="0" max="5" required autocomplete="off">
