--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=40">
-	<link rel="stylesheet" href="menustyle.css?v=40">
+	<link rel="stylesheet" href="globalstyle.css?v=42">
+	<link rel="stylesheet" href="menustyle.css?v=42">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<meta name="title" content="Pokemath">
 	<meta name="description" content="En nettside hvor man kan øve på de fire regneartene og få informasjon om ulike pokemon når man løser nok oppgaver.">
@@ -17,120 +17,17 @@
 	<meta name="revisit-after" content="10 days">
 	<meta name="author" content="Tirco">
 </head>
-<div>
-	<div class="cookie-container" id="cookie-container">
-		<h2 class="cookie-header">Cookie Policy</h2>
-		<div class="">
-			<p class="cookie-text">
-				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Siden vil ikke fungere optimalt om du ikke godkjenner bruken av cookies.
-			</p>
-			<button class="button-1" onClick="acceptCookies()">
-				Okay!
-			</button>
-			<a class="button-2" href="about.html#cookies">
-				Mer informasjon.
-			</a>
-		</div>
-	</div>
-	<div class="topbar">
-		<a href="index.html" id="backbutton">&#8249;</a>
-		<a href="shop.html" id="money" class="topbar-icon-left">
-			<img id="coinimage" src="money.svg" width="50" 
-			height="50"/>
-			<text id="cointext" class="topbar-icontext-left money score"
-			data-added="0" data-total="0"></text>
-		</a>
-		<a href="dex.html" id="caught" class="topbar-icon-left">
-			<img id="ballimage" src="pokeball.svg" width="50" 
-			height="50"/>
-			<text id="balltext" class="topbar-icontext-left">0</text>
-		</a>
-		<a href="badges.html" id="badges" class="topbar-icon-left">
-			<img id="badgeimage" src="images/badges/1.png" width="50" 
-			height="50"/>
-		</a>
-		<div id="playercard" class="topbar-icon-left playercard">
-			<a class="playerbtn"><img id="playerimage" src="images/player.png" width="50" 
-			height="50"/>
-			<text id="playertext" class="topbar-icontext-left">Ash</text></a>
-			<div class="playercard-content">
-				<div class="trainercard">
-					<div class="card-avatar">
-						<img id="playerimagebig" src="images/player.png" width="100%"></img>
-					</div>
-					<div class="trainercard-details">
-					   <div class="trainercard-name">
-						   <text id="playertextheader">Ketchup </text> <button id="editname" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Endre</button></div>
-					   <div class="trainercard-occupation">Pokémon Trener</div>
-					   <br>
-					   Oppgaver løst pr Nivå:
-					   <div class="trainercard-about">
-						  <div class="trainercard-item">
-							 <span class="value">1</span>
-							 <span class="label" id="t1solved">0000</span>
-						  </div>
-						  <div class="trainercard-item">
-							 <span class="value">2</span>
-							 <span class="label" id="t2solved">0000</span>
-						  </div>
-						  <div class="trainercard-item">
-							 <span class="value">3</span>
-							 <span class="label" id="t3solved">0000</span>
-						  </div>
-						  <div class="trainercard-item">
-							<span class="value">4</span>
-							<span class="label" id="t4solved">0000</span>
-						 </div>
-						 <div class="trainercard-item">
-							<span class="value">5</span>
-							<span class="label" id="t5solved">0000</span>
-						 </div>
-					   </div>
-					   <div class="skills">
-						  <span class="value"> </span>
-					   </div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="dropdown">
-			<button class="dropbtn">
-				<img id="gearimage" src="images/gear.png" width="50" 
-				height="50"/>
-			  <i class="fa fa-caret-down"></i>
-			</button>
-			<div class="dropdown-content">
-			  <a href="index.html">Hovedmeny</a>
-			  <a href="dex.html">Pokedex</a>
-			  <a href="shop.html">Butikk</a>
-			  <a href="about.html">Om siden</a>
-			  <a href="about.html#contact">Kontakt oss</a>
-			  <a href="about.html#news">Nylige oppdateringer</a>
-			  <a href="saveandload.html">Lagre / Last Inn</a>
-			  <a href="faq.html">FAQ</a>
-			  <a href="#"> </a>
-			  <a onclick="resetPrompt()">Tilbakestill (Slett alt)</a>
-			</div>
-		</div>
-	</div>
-<image src="" alt="" id="background"></image>
-<div id="notification-container"></div>
+<div id="header"></div>
+	<script>
+    fetch('header.html')
+        .then(response => response.text())
+        .then(data => document.getElementById('header').innerHTML = data);
 
-
-<div id="id01" class="modal">
-	<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-	<form class="modal-content">
-	  <div class="container">
-		<h1>Endre navn</h1>
-		<label for="name"><b>Navn</b></label>
-		<input type="name" placeholder="Skriv inn nytt navn" name="name" required>
-		<div class="clearfix">
-		  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn button-1">Avbryt</button>
-		  <button type="submit" class="signupbtn button-1">Lagre</button>
-		</div>
-	  </div>
-	</form>
-  </div>
+		const cookieButton = document.getElementById("acceptCookies");
+            if (cookieButton) {
+                cookieButton.addEventListener("click", acceptCookies);
+            }
+	</script>
 <div class="main">
 	<noscript>
 		<div style="border: 1px solid purple; padding: 10px">
@@ -268,11 +165,27 @@
 </div>
 
 <div id="alertbox" class="alert simple-alert is-hidden-"> <!-- is-hidden if hidden-->
-	<h3>God Sommer!<a class="date"> 10.06.2024</a></h3>
-	<p>Vi nærmer oss slutten på enda et skoleår!<br>
+	<h3>Oida!<a class="date"> 12.11.2024</a></h3>
+	<img>
+		<img src="./images/under_construction.png" alt="Under Construction" width="240" height="195"><br>
+		Etter de forrige oppdateringene så er det flere av delene på PokeMath som sliter med å lastes inn!<br>
+		PokeDex, Lagre og Last Inn, PokeViewer og andre undersider vil få små eller store endringer i nær fremtid.<br>
+		Jeg jobber med å få de på plass igjen. Takk for at dere sier ifra! <br><br>
+		Minner om at dere fortsatt burde lagre backups!<br>
+		Nå som vi gjør større endringer så kan nettleserne finne på å slette lagret arbeid.<br>
+	</p>
+	<h3>Oppdateringer!<a class="date"> 04.11.2024</a></h3>
+	<p>Vi holder fortsatt på med forbedringer!<br>
+		Mange av forbedringene jeg har jobbet med i det siste, syns ikke for normale brukere.<br>
+		For det meste har jeg lært om hvordan man kan sende informasjon mellom bruker og en server, for å få til samspillsfunksjoner.<br><br>
+
+		Jeg jobber også med å endre hvordan ting er lagret, og hvordan mattesiden og nivåene fungerer, men dette er et såpass omfattende arbeid, at det tar lang tid før det kommer ut til brukerne.<br>
+		<br>
+
+		Jeg har oppdaget blandt noen av mine egne elever at de er koblet til via http: istedet for https:. Dette fører til at noen funksjoner rett og slett ikke fungerer, fordi koblingen ikke er sikker. Pass på å koble til via <ins><a href="https://www.pokemath.online">https://www.pokemath.online</a></ins> <br>
 		Minner om at det er lurt å lagre en backup med <ins><a href="./saveandload.html">lagre og last opp</a></ins> verktøyet!<br><br>
 		Vi minner også om at de vanligste spørsmålene kan man få svar på i vår <ins><a href="./faq.html">FAQ</a></ins> 
-		Vi ønsker dere alle en riktig god ferie!<br>
+		Vi ønsker dere alle et fortsatt godt skoleår!<br>
 		
 	</p>
 	<a class="close" onclick="closeAlert()">&times;</a>
@@ -280,8 +193,8 @@
 	- Mvh. PokeMorten
 	<br>
 </div>
-	  <script src="global.js?v=40"></script>
-	  <script src="menu.js?v=40"></script>
+	  <script src="global.js?v=42"></script>
+	  <script src="menu.js?v=42"></script>
 </body>
 
 </html>
