--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -10,8 +10,8 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=40">
-	<link rel="stylesheet" href="pokemon.css?v=40">
+	<link rel="stylesheet" href="globalstyle.css?v=42">
+	<link rel="stylesheet" href="pokemon.css?v=42">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
@@ -22,120 +22,17 @@
 		  <span style="color:red">JavaScript er ikke aktivert! PokeMath trenger å bruke JavaScript for å fungere. Du kan lese mer om hvordan man kan skru på JavaScript <a href="https://support.microsoft.com/nb-no/office/aktivere-javascript-7bb9ee74-6a9e-4dd1-babf-b0a1bb136361">her. (microsoft.com)</a></span>
 		</div>
 	</noscript>
-	<div class="cookie-container" id="cookie-container">
-		<h2 class="cookie-header">Cookie Policy</h2>
-		<div class="">
-			<p class="cookie-text">
-				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Siden vil ikke fungere optimalt om du ikke godkjenner bruken av cookies.
-			</p>
-			<button class="button-1" onClick="acceptCookies()">
-				Okay!
-			</button>
-			<a class="button-2" href="about.html#cookies">
-				Mer informasjon.
-			</a>
-		</div>
-	</div>
-		<div class="topbar">
-			<a href="index.html" id="backbutton">&#8249;</a>
-			<a href="shop.html" id="money" class="topbar-icon-left">
-				<img id="coinimage" src="money.svg" width="50" 
-				height="50"/>
-				<text id="cointext" class="topbar-icontext-left money score"
-				data-added="0" data-total="0"></text>
-			</a>
-			<a href="dex.html" id="caught" class="topbar-icon-left">
-				<img id="ballimage" src="pokeball.svg" width="50" 
-				height="50"/>
-				<text id="balltext" class="topbar-icontext-left">0</text>
-			</a>
-			<a href="badges.html" id="badges" class="topbar-icon-left">
-				<img id="badgeimage" src="images/badges/1.png" width="50" 
-				height="50"/>
-			</a>
-			<div id="playercard" class="topbar-icon-left playercard">
-				<a class="playerbtn"><img id="playerimage" src="images/player.png" width="50" 
-				height="50"/>
-				<text id="playertext" class="topbar-icontext-left">Ash</text></a>
-				<div class="playercard-content">
-					<div class="trainercard">
-						<div class="card-avatar">
-							<img id="playerimagebig" src="images/player.png" width="100%"></img>
-						</div>
-						<div class="trainercard-details">
-						   <div class="trainercard-name">
-							   <text id="playertextheader">Ketchup </text> <button id="editname" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Endre</button></div>
-						   <div class="trainercard-occupation">Pokémon Trener</div>
-						   <br>
-						   Oppgaver løst pr Nivå:
-						   <div class="trainercard-about">
-							  <div class="trainercard-item">
-								 <span class="value">1</span>
-								 <span class="label" id="t1solved">0000</span>
-							  </div>
-							  <div class="trainercard-item">
-								 <span class="value">2</span>
-								 <span class="label" id="t2solved">0000</span>
-							  </div>
-							  <div class="trainercard-item">
-								 <span class="value">3</span>
-								 <span class="label" id="t3solved">0000</span>
-							  </div>
-							  <div class="trainercard-item">
-								<span class="value">4</span>
-								<span class="label" id="t4solved">0000</span>
-							 </div>
-							 <div class="trainercard-item">
-								<span class="value">5</span>
-								<span class="label" id="t5solved">0000</span>
-							 </div>
-						   </div>
-						   <div class="skills">
-							  <span class="value"> </span>
-						   </div>
-						</div>
-					</div>
-					<div id="tracker" class="tracker">
-						<div id="levelDetails" class="tracker"></div>
-					</div>
-				</div>
-			</div>
-			<div class="dropdown">
-				<button class="dropbtn">
-					<img id="gearimage" src="images/gear.png" width="50" 
-					height="50"/>
-				  <i class="fa fa-caret-down"></i>
-				</button>
-				<div class="dropdown-content">
-				  <a href="index.html">Hovedmeny</a>
-				  <a href="dex.html">Pokedex</a>
-				  <a href="shop.html">Butikk</a>
-				  <a href="about.html">Om siden</a>
-				  <a href="about.html#contact">Kontakt oss</a>
-				  <a href="about.html#news">Nylige oppdateringer</a>
-				  <a href="saveandload.html">Lagre / Last Inn</a>
-				  <a href="faq.html">FAQ</a>
-				  <a href="#"> </a>
-				  <a onclick="resetPrompt()">Tilbakestill (Slett alt)</a>
-				</div>
-			</div>
-		</div>
-	<image src="" alt="" id="background"></image>
-	<div id="notification-container"></div>
-	<div id="id01" class="modal">
-		<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-		<form class="modal-content">
-		  <div class="container">
-			<h1>Endre navn</h1>
-			<label for="name"><b>Navn</b></label>
-			<input type="name" placeholder="Skriv inn nytt navn" name="name" required>
-			<div class="clearfix">
-			  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn button-1">Avbryt</button>
-			  <button type="submit" class="signupbtn button-1">Lagre</button>
-			</div>
-		  </div>
-		</form>
-	  </div>
+	<div id="header"></div>
+	<script>
+    fetch('header.html')
+        .then(response => response.text())
+        .then(data => document.getElementById('header').innerHTML = data);
+
+		const cookieButton = document.getElementById("acceptCookies");
+            if (cookieButton) {
+                cookieButton.addEventListener("click", acceptCookies);
+            }
+	</script>
 <body>
 	<div class="halloween-egg is-hidden" id="halloween-egg">
 		<img id="halloween-egg-image" src="images/events/halloween/halloween-egg-01.png" width="150" 
@@ -196,10 +93,10 @@
 <div class="botbar">
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
-	  <script src="alternateforms.js?v=40"></script>
-	  <script src="pokemondata.js?v=40"></script>
-	  <script src="global.js?v=40"></script>
-	  <script src="math.js?v=40"></script>
-	  <script src="pokestuff.js?v=40"></script>
+	  <script src="alternateforms.js?v=42"></script>
+	  <script src="pokemondata.js?v=42"></script>
+	  <script src="global.js?v=42"></script>
+	  <script src="math.js?v=42"></script>
+	  <script src="pokestuff.js?v=90"></script>
 	  <script>loadAmountFromList(5,true)</script>
 </html>
