--- a/MathGame/shop.html
+++ b/MathGame/shop.html
@@ -10,124 +10,23 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=40">
-	<link rel="stylesheet" href="menustyle.css?v=40">
-	<link rel="stylesheet" href="shop.css?v=40">
+	<link rel="stylesheet" href="globalstyle.css?v=42">
+	<link rel="stylesheet" href="menustyle.css?v=42">
+	<link rel="stylesheet" href="shop.css?v=42">
 	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </head>
 <body>
-	<div class="cookie-container" id="cookie-container">
-		<h2 class="cookie-header">Cookie Policy</h2>
-		<div class="">
-			<p class="cookie-text">
-				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Siden vil ikke fungere optimalt om du ikke godkjenner bruken av cookies.
-			</p>
-			<button class="button-1" onClick="acceptCookies()">
-				Okay!
-			</button>
-			<a class="button-2" href="about.html#cookies">
-				Mer informasjon.
-			</a>
-		</div>
-	</div>
-	<div>
-		<div class="topbar">
-			<a href="index.html" id="backbutton">&#8249;</a>
-			<a href="shop.html" id="money" class="topbar-icon-left">
-				<img id="coinimage" src="money.svg" width="50" 
-				height="50"/>
-				<text id="cointext" class="topbar-icontext-left money score"
-				data-added="0" data-total="0"></text>
-			</a>
-			<a href="dex.html" id="caught" class="topbar-icon-left">
-				<img id="ballimage" src="pokeball.svg" width="50" 
-				height="50"/>
-				<text id="balltext" class="topbar-icontext-left">0</text>
-			</a>
-			<a href="badges.html" id="badges" class="topbar-icon-left">
-				<img id="badgeimage" src="images/badges/1.png" width="50" 
-				height="50"/>
-			</a>
-			<div id="playercard" class="topbar-icon-left playercard">
-				<a class="playerbtn"><img id="playerimage" src="images/player.png" width="50" 
-				height="50"/>
-				<text id="playertext" class="topbar-icontext-left">Ash</text></a>
-				<div class="playercard-content">
-					<div class="trainercard">
-						<div class="card-avatar">
-							<img id="playerimagebig" src="images/player.png" width="100%"></img>
-						</div>
-						<div class="trainercard-details">
-						   <div class="trainercard-name">
-							   <text id="playertextheader">Ketchup </text> <button id="editname" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Endre</button></div>
-						   <div class="trainercard-occupation">Pokémon Trener</div>
-						   <br>
-						   Oppgaver løst pr Nivå:
-						   <div class="trainercard-about">
-							  <div class="trainercard-item">
-								 <span class="value">1</span>
-								 <span class="label" id="t1solved">0000</span>
-							  </div>
-							  <div class="trainercard-item">
-								 <span class="value">2</span>
-								 <span class="label" id="t2solved">0000</span>
-							  </div>
-							  <div class="trainercard-item">
-								 <span class="value">3</span>
-								 <span class="label" id="t3solved">0000</span>
-							  </div>
-							  <div class="trainercard-item">
-								<span class="value">4</span>
-								<span class="label" id="t4solved">0000</span>
-							 </div>
-							 <div class="trainercard-item">
-								<span class="value">5</span>
-								<span class="label" id="t5solved">0000</span>
-							 </div>
-						   </div>
-						   <div class="skills">
-							  <span class="value"> </span>
-						   </div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="dropdown">
-				<button class="dropbtn">
-					<img id="gearimage" src="images/gear.png" width="50" 
-					height="50"/>
-				  <i class="fa fa-caret-down"></i>
-				</button>
-				<div class="dropdown-content">
-				  <a href="index.html">Hovedmeny</a>
-				  <a href="dex.html">Pokedex</a>
-				  <a href="shop.html">Butikk</a>
-				  <a href="about.html">Om siden</a>
-				  <a href="about.html#contact">Kontakt oss</a>
-				  <a href="about.html#news">Nylige oppdateringer</a>
-				  <a href="saveandload.html">Lagre / Last Inn</a>
-				  <a href="faq.html">FAQ</a>
-				  <a href="#"> </a>
-				  <a onclick="resetPrompt()">Tilbakestill (Slett alt)</a>
-				</div>
-			</div>
-		</div>
-	<image src="" alt="" id="background"></image>
-	<div id="notification-container"></div>
-	<div id="id01" class="modal">
-		<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-		<form class="modal-content">
-		  <div class="container">
-			<h1>Endre navn</h1>
-			<label for="name"><b>Navn</b></label>
-			<input type="name" placeholder="Skriv inn nytt navn" name="name" required>
-			<div class="clearfix">
-			  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn button-1">Avbryt</button>
-			  <button type="submit" class="signupbtn button-1">Lagre</button>
-			</div>
-		  </div>
-		</form>
-	  </div>
+	<div id="header"></div>
+	<script>
+    fetch('header.html')
+        .then(response => response.text())
+        .then(data => document.getElementById('header').innerHTML = data);
+
+		const cookieButton = document.getElementById("acceptCookies");
+            if (cookieButton) {
+                cookieButton.addEventListener("click", acceptCookies);
+            }
+	</script>
 <div class="main">
 	<div class="carousel"
  		 data-flickity='{ "wrapAround": true }'>
@@ -771,6 +670,160 @@
 				</span>
 			</div>
 		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/ilima.png');">
+			<div class="carousel-playericon-caption" id="ilima" >
+				<h3>Ilima</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/lana.png');">
+			<div class="carousel-playericon-caption" id="lana" >
+				<h3>Lana</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/kiawe.png');">
+			<div class="carousel-playericon-caption" id="kiawe" >
+				<h3>Kiawe</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/mallow.png');">
+			<div class="carousel-playericon-caption" id="mallow" >
+				<h3>Mallow</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/sophocles.png');">
+			<div class="carousel-playericon-caption" id="sophocles" >
+				<h3>Sophocles</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/acerola.png');">
+			<div class="carousel-playericon-caption" id="acerola" >
+				<h3>Acerola</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/mina.png');">
+			<div class="carousel-playericon-caption" id="mina" >
+				<h3>Mina</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/hala.png');">
+			<div class="carousel-playericon-caption" id="hala" >
+				<h3>Hala</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/olivia.png');">
+			<div class="carousel-playericon-caption" id="olivia" >
+				<h3>Olivia</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/nanu.png');">
+			<div class="carousel-playericon-caption" id="nanu" >
+				<h3>Nanu</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/hapu.png');">
+			<div class="carousel-playericon-caption" id="hapu" >
+				<h3>Hapu</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
 		<div class="carousel-cell" style="background-image: url('images/playericons/may.png');">
 			<div class="carousel-playericon-caption" id="may" >
 				<h3>May</h3>
@@ -850,8 +903,8 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-	  <script src="global.js?v=40"></script>
-	  <script src="shop.js?v=40"></script>
+	  <script src="global.js?v=42"></script>
+	  <script src="shop.js?v=42"></script>
 </body>
 
 </html>
