Pre xmas update 1

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -97,6 +97,15 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h2>
+				<p>27.11.2024</p>
+				- Gjorde forberedelser til jule-eventet.<br>
+				- Fikset en feil med pokeviewer, slik at den ikke ble lastet inn riktig.<br>
+				- Oppdaterte hvordan ting ble lagret lokalt (Nå bruker koden mindre av JSON.stringify).<br>
+				- Ryddet opp i save-and-load.<br>
+				- Gjorde så de hemmelige kodene nå fungerer som de skal igjen.<br>
+				- Laget en feilmelding hvis pokedexen prøvde å laste inn en pokemon som ikke finnes. Feilmeldingen vil vises hver gang du går inn på pokedexen, så send meg gjerne en kopi av lagringsfilen så jeg kan se hva som gikk galt!<br>
+				- Fjernet noen uønskede test-meldinger i konsollen.<br>
+				- Endret måten antall fangede pokemon regnes ut, slik at den er mer nøyaktig. <br>
 				<p>12.11.2024</p>
 				- Prøvde å fikse enkelte sider som ikke fungerte etter forrige oppdatering. <br>
 				- Oppdaterte funksjonen til pokedexen så den skal (i teorien) være mer effektiv på innlasting. <br>
