Fixes and improvments - specifically to saveload

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -11,9 +11,9 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=42">
-	<link rel="stylesheet" href="menustyle.css?v=42">
-	<link rel="stylesheet" href="about.css?v=42">
+	<link rel="stylesheet" href="globalstyle.css?v=100">
+	<link rel="stylesheet" href="menustyle.css?v=100">
+	<link rel="stylesheet" href="about.css?v=100">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <div id="header"></div>
@@ -97,6 +97,14 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h2>
+				<p>07.12.2024</p>
+				- fikset en breddefeil på pokeviewer.<br>
+				- fikset så missingNo synes i pokeviewer.<br>
+				- la inn pokedex-innlegget til pokemon #1009 & #1010<br>
+				- fikset så darkrai nå blir merket som mytisk, istedetfor legendarisk. Ops! <br>
+				- oppdaterte lagre og last inn funksjonen. Nå skal den være mer effektiv når den lagrer filer, og det skal være veldig vanskelig for den å unngå informasjon. Det forrige systemet var veldig komplisert, nå har det blitt forenklet massivt. Det skal fortsatt være mulig å laste inn gamle filer.<br>
+				- La inn en påminnelse om å lagre en backup.<br>
+				- Jobber videre med funksjoner som kobler brukere mot nett.<br>
 				<p>27.11.2024</p>
 				- Gjorde forberedelser til jule-eventet.<br>
 				- La til 31 nye julevarianter av pokemon!<br>
@@ -350,7 +358,7 @@
 </div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=42"></script>
+	  <script src="global.js?v=100"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 </body>
 <!-- https://icon-icons.com/users/RoundIcons/icon-sets/ Ikoner laget av RoundIcons 
