--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -72,15 +72,15 @@
 
 		<button class="altbtn generationDropdown" id="generationDropdown">Generasjon &#x25BC;
 			<div class="generationContent">
-				<label><input type="checkbox" class="genCheckbox" value="1" checked> Gen I</label>
-				<label><input type="checkbox" class="genCheckbox" value="2" checked> Gen II</label>
-				<label><input type="checkbox" class="genCheckbox" value="3" checked> Gen III</label>
-				<label><input type="checkbox" class="genCheckbox" value="4" checked> Gen IV</label>
-				<label><input type="checkbox" class="genCheckbox" value="5" checked> Gen V</label>
-				<label><input type="checkbox" class="genCheckbox" value="6" checked> Gen VI</label>
-				<label><input type="checkbox" class="genCheckbox" value="7" checked> Gen VII</label>
-				<label><input type="checkbox" class="genCheckbox" value="8" checked> Gen VIII</label>
-				<label><input type="checkbox" class="genCheckbox" value="9" checked> Gen IX</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-1" checked> Gen I</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-2" checked> Gen II</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-3" checked> Gen III</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-4" checked> Gen IV</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-5" checked> Gen V</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-6" checked> Gen VI</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-7" checked> Gen VII</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-8" checked> Gen VIII</label>
+				<label><input type="checkbox" class="genCheckbox" value="gen-9" checked> Gen IX</label>
 			</div>
 		</button>
 	</div>
